# lifev

./: .cproject  .cvsignore  .emacs-dirvars  .gitignore  .project  AUTHORS  AztecOOPreconditioner.cpp  AztecOOPreconditioner.hpp  BCInterface.cpp  BCInterface.hpp  BCInterface0D.hpp  BCInterface1D.hpp  BCInterface1DData.cpp  BCInterface1DData.hpp  BCInterface1DDefinitions.hpp  BCInterface1DFunction.hpp  BCInterface1DFunctionDefault.hpp  BCInterface1DFunctionFile.hpp  BCInterface1DFunctionFileSolver.hpp  BCInterface1DFunctionSolver.hpp  BCInterface1D_Data.cpp  BCInterface1D_Data.hpp  BCInterface1D_DefaultFunctions.hpp  BCInterface1D_Definitions.hpp  BCInterface1D_Function.hpp  BCInterface1D_FunctionFile.hpp  BCInterface1D_OperatorFunction.hpp  BCInterface1D_OperatorFunctionFile.hpp  BCInterface3D.hpp  BCInterface3DData.cpp  BCInterface3DData.hpp  BCInterface3DDefinitions.hpp  BCInterface3DFSI.cpp  BCInterface3DFSI.hpp  BCInterface3DFunction.hpp  BCInterface3DFunctionFSI.cpp  BCInterface3DFunctionFSI.hpp  BCInterface3DFunctionFile.hpp  BCInterface3DFunctionFileSolver.hpp  BCInterface3DFunctionSolver.hpp  (+315 more)
doc/: CMakeLists.txt  Doxyfile.cmake  Doxyfile.in  Makefile.am
doc/CodingGuidelines/: CMakeLists.txt  ExampleClass.cpp  ExampleClass.hpp  LifeV_CleaningWeeks2010.tex  LifeV_CleaningWeeks2010_RenameFiles.txt  LifeV_Development_Guidelines.tex  LifeV_Makefile.am  Makefile.am  TemplateClass.cpp  TemplateClass.hpp  ltxcompile  main.cpp  mcode.sty  testsuite.at
doc/StateOfTheArt/: LifeV_SOTA.tex  Makefile.am  algorithme.sty  biblio.bib
doc/api/: .cvsignore  BlockAlgebra.dox  LinearAlgebra.dox  Makefile.am  Modules.dox
doc/common/: Makefile.am  doxygen.css  footer.html  header.html  mainfooter.html  mainheader.html
doc/manual/: .cvsignore  BCCond.eps  BCCond.fig  BCHandler.eps  BCHandler.fig  BasElSha.eps  BasElSha.fig  CMakeLists.txt  Directories_Organization  Fem_nodes.eps  Fem_nodes.fig  Fem_nodes.ps  Makefile-cavity  Makefile.am  NSCode_mesh_types.eps  NSCode_mesh_types.kpr  Specifications.tex  boundary_conditions.ps  cavity.cpp  cavity.fig  cavity.pdf_t  cavity.tex  cavityFigure.pdf_t  data-cavity  doc_menu.ps  docfe.tex  fsi.tex  jfg.tex  laplacian.tex  letter_Jan_2000.txt  life.bib  lifestyle.cls  lifev-dev.kilepr  lifev-dev.tex  lifev-dev_conventions.tex  lifev-dev_generalities.tex  lifev-dev_howto.tex  lifev-dev_overview.tex  lifev-examples.tex  lifev-install.tex  (+11 more)
doc/notes/: Makefile.am  bdf_notes_alex_oct_03.txt  doxy_comment.tex  letter_changes_ott03.txt
doc/tex/: .cvsignore  Makefile.am  biblio.bib  lifeoop.bib  lifestyle.cls  lifev.bib  rcs.sty
examples/: CMakeLists.txt  Makefile.am
examples/application_aortaFSI/: boundaryConditions.hpp  data  main.cpp
examples/benchmark_GreenshieldsWeller/: Makefile.am  boundaryConditions.hpp  data  main.cpp
examples/benchmark_HPCNavierStokes/: Makefile.am  benchmark_HPCNavierStokes.cpp
examples/benchmark_RossEthierSteinman/: ESSteady_function.cpp  ESSteady_function.hpp  ESUnsteady_function.cpp  ESUnsteady_function.hpp  Makefile.am  data  dataAccuracy  dataSpaceConvergence  ethiersteinman.cpp  ethiersteinman.hpp  exportMesh3D.hpp  main.cpp  testsuite.at
examples/example_InitializationStokesFSI/: boundaryConditions.hpp  data  main.cpp  ud_functions.cpp  ud_functions.hpp
examples/example_InitializeFSIStokes/: boundaryConditions.hpp  data  flowConditions.cpp  main.cpp  testsuiteCE.at  ud_functions.cpp  ud_functions.hpp
examples/example_ML/: MLTester.hpp  Makefile.am  data  main.cpp
examples/example_NavierStokesRestart/: Makefile.am  cylinder.cpp  data  exactSolution.hpp  main.cpp  testsuite.at
examples/example_OseenAssembler/: EthierSteinmanUnsteady.cpp  EthierSteinmanUnsteady.hpp  Makefile.am  data  main.cpp  testsuite.at
examples/example_SmoothAneurysm/: OldData  TimeStep_data  boundaryConditions.hpp  data  main.cpp  testsuiteCE.at  testsuiteGCE.at  ud_functions.cpp  ud_functions.hpp
examples/example_SolverBelos/: Makefile.am  SolverParamList.xml  data  main.cpp  testsuite.at
examples/example_cavity/: Makefile.am  data  main.cpp
examples/example_cylinder/: CMakeLists.txt  Makefile.am  cylinder.cpp  main.cpp  testsuite.at
examples/example_fsi_analytical_solution/: boundaryConditions.hpp  main.cpp
examples/example_heart/: Makefile.am  data  heart.cpp  heart.hpp  main.cpp
examples/example_impes/: CMakeLists.txt  impes.cpp  impes.hpp  main.cpp  user_fun.cpp  user_fun.hpp
examples/example_incompressibleStructure/: Makefile.am  data  main.cpp
examples/example_masstransport/: Makefile.am  boundaryConditions.hpp  data  main.cpp  masstransport.cpp  masstransport.hpp
examples/example_nsResistanceBC/: Makefile.am  data  main.cpp  resistance.cpp  resistance.hpp
examples/example_ns_flux/: cylinder.cpp  cylinder.hpp  data  main.cpp  testsuite.at
examples/example_restartFSI/: Makefile.am  boundaryConditions.hpp  data  lumpedHeart.hpp  main.cpp  ud_functions.cpp
examples/example_steadyFSIinitialization/: #boundaryConditions.hpp#  #boundaryConditionsSteady.hpp#  #main.cpp#  Makefile.am  boundaryConditions.hpp  boundaryConditionsSteady.hpp  data  dataSteady  main.cpp  testsuiteCE.at  ud_functions.cpp  ud_functions.hpp
examples/example_structureWithTimeAdvance/: .rotation.cpp.swp  1  data  (+4 more)
testsuite/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.testsuite  README  expectations.qmr  gentest.sh  run.sh  test_bdf_comp.qmt  test_bdf_exec.qmt  test_bdf_resu.qmt  test_essentialbc_comp.qmt  test_essentialbc_exec.qmt  test_essentialbc_resu.qmt  test_fe_comp.qmt  test_fe_exec.qmt  test_fe_resu.qmt  test_linearelasticity_comp.qmt  test_linearelasticity_exec.qmt  test_linearelasticity_resu.qmt  test_matrix_comp.qmt  test_matrix_exec.qmt  test_matrix_resu.qmt  test_mesh_comp.qmt  test_mesh_exec.qmt  test_mesh_resu.qmt  test_mixte_comp.qmt  test_mixte_exec.qmt  test_mixte_resu.qmt  test_naturalbc_comp.qmt  test_naturalbc_exec.qmt  test_naturalbc_resu.qmt  test_p2_comp.qmt  test_p2_exec.qmt  test_p2_resu.qmt  test_postproc_comp.qmt  test_postproc_exec.qmt  test_postproc_resu.qmt  test_q1_comp.qmt  test_q1_exec.qmt  (+8 more)
(+4323 files in other folders)
